update the product update and delete then start to change password

--- a/public/farmer/style.css
+++ b/public/farmer/style.css
@@ -27,6 +27,13 @@
     padding-left:10px;
     color:black;
 }
+.proSize {
+    height:200px;
+    width:200px;
+}
+.lenPassword {
+    width:60%;
+}
 .rightupbox {
     width:75%;
     height:50px;
