update change password, home product base

--- a/public/addtocard/OrderDetailStyle.css
+++ b/public/addtocard/OrderDetailStyle.css
@@ -41,3 +41,10 @@
     background-color: rgb(64, 116, 211);
     color: ghostwhite;
 }
+
+#deal .card_w {
+    width:30%;
+}
+#deal .cards_t {
+    width:100%;
+}
