--- a/public/farmer/profile.css
+++ b/public/farmer/profile.css
@@ -57,3 +57,13 @@ body{margin-top:20px;
         margin-left: 1rem;
         margin-right: 1rem;
     }
+
+.center {
+    height:100%;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+}
+.profile_change {
+    display:none;
+}
