--- a/public/home/homecss.css
+++ b/public/home/homecss.css
@@ -33,7 +33,7 @@
           grid-template-columns: 1fr;
      /* grid-template-rows: 0.4fr 0.4fr 2.2fr 1.2fr 1.2fr 1.2fr 1fr;  */
       grid-template-areas:
-          "logo"
+          
           "header"
           "search"
           "sidebar"
@@ -53,17 +53,29 @@
 
   }
     
-   #logo {
+   /*#logo {
     grid-area: logo;
     border-radius: var(--main-radius);
     padding-top: var(--main-padding);
   }
   #logo Img{
       width: 100%;
+  }*/
+  .logo-container{
+    width:220px;
+    margin-left: 1px;
+    margin-top: 34px;
+
   }
+  .logo{
+    width:100%;
+    height:auto;
+    border-radius: 5px;
+  }
+
   
   #header {
-    background: #84ffff;
+    background: #538b45;
     grid-area: header;
     border-radius: var(--main-radius);
     padding-top: var(--main-padding);
@@ -178,11 +190,12 @@
     border-radius: .5rem;
     color:var(--black);
     text-decoration: none;
+    
   }
   
   .header-2 .navbar a:hover{
     background:var(--green);
-    color:rgb(88, 116, 241);
+    color:rgb(38, 78, 5);
   }
   
   .header-2 .icons a{
@@ -209,13 +222,15 @@
   
 footer .box-container{
     display: flex;
-    gap:1.5rem;
+    gap:0.5rem;
     flex-wrap: wrap;
+    
   }
   
   footer .box-container .box{
     padding:1rem 0;
     flex:1 1 25rem;
+    
   }
   
   footer .box-container .box .share a{
@@ -227,12 +242,12 @@ footer .box-container{
   }
   
   footer .box-container .box h3{
-    font-size: 2.5rem;
+    font-size: 1.0rem;
     color:var(--black);
   }
   
   footer .box-container .box p{
-    font-size: 1.3rem;
+    font-size: 1.0rem;
     color:#666;
     padding:.7rem 0;
   }
@@ -244,7 +259,7 @@ footer .box-container{
   footer .box-container .box .links a{
     display: block;
     padding:.5rem 0;
-    font-size: 1.7rem;
+    font-size: 1.0rem;
     color:#333;
     text-decoration: none;
   }
@@ -259,7 +274,7 @@ footer .box-container{
     border-top: .1rem solid rgba(0,0,0,.1);
     margin-top: 1rem;
     text-align: center;
-    font-size: 2rem;
+    font-size: 1rem;
   }
   
   footer .credit span{
@@ -267,7 +282,7 @@ footer .box-container{
   }
   
   .product .box-container .box{
-    padding: 2px 16px;
+    padding: 2px 10px;
   }
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
