--- a/public/customer/customerproductsdisplay.css
+++ b/public/customer/customerproductsdisplay.css
@@ -186,7 +186,7 @@
     overflow: hidden;
     box-sizing: border-box;
     justify-content: center;
-    width: 25%;
+    width: 15%;
     height: auto;
     display: inline-block;
     box-shadow: 2px 2px 20px black;
@@ -208,6 +208,7 @@
 .productsdisplay .cardtotal .card input{
     width: 75%;
     overflow: hidden;
+    margin-bottom: 3%;
 
 }
   
